--- a/CameraControl/DSLRPCToolSub/Controles/PhotoEdit.xaml
+++ b/CameraControl/DSLRPCToolSub/Controles/PhotoEdit.xaml
@@ -30,8 +30,9 @@
                             <Border Background="Transparent" BorderThickness="0 0 0 1" BorderBrush="#7f8486" Margin="5 0 5 0">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox Margin="0" IsEnabled="{Binding IsBackgroundFilterApply}" PreviewTextInput="TextBox_PreviewTextInput" 
-                                             Text="{Binding ElementName=sldBackground, Path=Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  Width="30" TextAlignment="Left" 
-                                             FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="#7f8486" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto" />
+                                             Text="{Binding ElementName=sldBackground, Path=Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  Width="25" TextAlignment="Left" 
+                                             FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="Transparent" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto" />
+                                    <TextBlock Text="%" Foreground="#7f8486" VerticalAlignment="Center" Margin="0 0 0 0" FontSize="12" HorizontalAlignment="Right" FontWeight="Medium" FontFamily="Roboto"/>
                                 </StackPanel>
                             </Border>
                         </StackPanel>
@@ -40,9 +41,9 @@
                     </Grid>
                 </StackPanel>
 
-                <Separator Margin="0,15,0,15" Height="1px" Name="Separator22" Background="#444647" Grid.Row="3"/>
+                <Separator Margin="0,15,0,5" Height="1px" Name="Separator22" Background="#444647" Grid.Row="3"/>
 
-                <StackPanel Orientation="Horizontal">
+                <!--<StackPanel Orientation="Horizontal">
                     <StackPanel Orientation="Horizontal" >
                         <RadioButton x:Name="rbIncldBG" IsChecked="{Binding IsIncludeBGApply}" FontSize="10" FontWeight="Black" FontFamily="Roboto" Background="Transparent" Foreground="#ffffff" GroupName="MCSites" Style="{StaticResource RadioSelector}" Width="20" Height="20" />
                         <Label Padding="3,5,8,5" Content="Include Background" FontSize="12" FontWeight="Medium" FontFamily="Roboto" Background="Transparent" Foreground="#ffffff"  />
@@ -51,7 +52,7 @@
                         <RadioButton x:Name="rbObjOnly" IsChecked="{Binding IsObjectOnlyApply}" FontSize="10" FontWeight="Black" FontFamily="Roboto" Background="Transparent" Foreground="#ffffff" GroupName="MCSites" Style="{StaticResource RadioSelector}" Width="20" Height="20" />
                         <Label Padding="3,5,0,5" Content="Object Only" FontSize="12" FontWeight="Medium" FontFamily="Roboto" Background="Transparent" Foreground="#ffffff"  />
                     </StackPanel>
-                </StackPanel>
+                </StackPanel>-->
 
                 <StackPanel Margin="0,15,0,0">
                     <TextBlock Text="White Balance" Foreground="#7f8486" FontSize="10" FontWeight="Medium" FontFamily="Roboto" Margin="0,0,0,5" />
@@ -65,7 +66,8 @@
                             <Border Background="Transparent" BorderThickness="0 0 0 1" BorderBrush="#7f8486" Margin="5 0 5 0">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox Margin="0" IsEnabled="{Binding IsWhiteBalanceApply}" PreviewTextInput="TextBox_PreviewTextInput" 
-                                             Text="{Binding Value, ElementName=sldWhiteBalance, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="#7f8486" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                             Text="{Binding Value, ElementName=sldWhiteBalance, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="25" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="Transparent" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                    <TextBlock Text="%" Foreground="#7f8486" VerticalAlignment="Center" Margin="0 0 0 0" FontSize="12" HorizontalAlignment="Right" FontWeight="Medium" FontFamily="Roboto"/>
                                 </StackPanel>
                             </Border>
                         </StackPanel>
@@ -86,7 +88,8 @@
                             <Border Background="Transparent" BorderThickness="0 0 0 1" BorderBrush="#7f8486" Margin="5 0 5 0">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox Margin="0" IsEnabled="{Binding IsContrastApply}" PreviewTextInput="TextBox_PreviewTextInput" 
-                                             Text="{Binding Value, ElementName=sldContrast, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="#7f8486" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                             Text="{Binding Value, ElementName=sldContrast, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="25" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="Transparent" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                    <TextBlock Text="%" Foreground="#7f8486" VerticalAlignment="Center" Margin="0 0 0 0" FontSize="12" HorizontalAlignment="Right" FontWeight="Medium" FontFamily="Roboto"/>
                                 </StackPanel>
                             </Border>
                         </StackPanel>
@@ -102,12 +105,13 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Width="60">
+                        <StackPanel Orientation="Horizontal" >
                             <CheckBox Background="Transparent" IsChecked="{Binding IsBrightnessApply}" Style="{StaticResource ChkboxSelector_new}" Width="21" />
                             <Border Background="Transparent" BorderThickness="0 0 0 1" BorderBrush="#7f8486" Margin="5 0 5 0">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox Margin="0" IsEnabled="{Binding IsBrightnessApply}" PreviewTextInput="TextBox_PreviewTextInput" 
-                                             Text="{Binding Value, ElementName=sldBrightness, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="#7f8486" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                             Text="{Binding Value, ElementName=sldBrightness, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="25" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="Transparent" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                    <TextBlock Text="%" Foreground="#7f8486" VerticalAlignment="Center" Margin="0 0 0 0" FontSize="12" HorizontalAlignment="Right" FontWeight="Medium" FontFamily="Roboto"/>
                                 </StackPanel>
                             </Border>
                         </StackPanel>
@@ -128,7 +132,8 @@
                             <Border Background="Transparent" BorderThickness="0 0 0 1" BorderBrush="#7f8486" Margin="5,0,5,0">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox Margin="0,0,0,0" IsEnabled="{Binding IsSaturationApply}" PreviewTextInput="TextBox_PreviewTextInput" 
-                                             Text="{Binding Value, ElementName=sldSaturation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="#7f8486" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                             Text="{Binding Value, ElementName=sldSaturation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="25" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="Transparent" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                    <TextBlock Text="%" Foreground="#7f8486" VerticalAlignment="Center" Margin="0 0 0 0" FontSize="12" HorizontalAlignment="Right" FontWeight="Medium" FontFamily="Roboto"/>
                                 </StackPanel>
                             </Border>
                         </StackPanel>
@@ -149,7 +154,8 @@
                             <Border Background="Transparent" BorderThickness="0 0 0 1" BorderBrush="#7f8486" Margin="5,0,5,0">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox Margin="0,0,0,0" IsEnabled="{Binding IsWhiteClippingApply}" PreviewTextInput="TextBox_PreviewTextInput" 
-                                             Text="{Binding Value, ElementName=sldWhiteClipping, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="30" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="#7f8486" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                             Text="{Binding Value, ElementName=sldWhiteClipping, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="25" TextAlignment="Left" FontSize="12" Foreground="#ffffff" Background="Transparent" BorderThickness="0" BorderBrush="Transparent" VerticalContentAlignment="Center" FontWeight="Medium" FontFamily="Roboto"/>
+                                    <TextBlock Text="%" Foreground="#7f8486" VerticalAlignment="Center" Margin="0 0 0 0" FontSize="12" HorizontalAlignment="Right" FontWeight="Medium" FontFamily="Roboto"/>
                                 </StackPanel>
                             </Border>
                         </StackPanel>
@@ -158,8 +164,8 @@
                     </Grid>
                 </StackPanel>
 
-                <Button Content="Apply All Frames " Background="#535657" HorizontalAlignment="Center" Width="230" Height="34" Margin="0,20,0,10"
-                        Command="{Binding ApplyAllFrames}" Style="{StaticResource Select_Folder}" >
+                <Button x:Name="ApplyAllFramesBtn" Content="Apply All Frames " Background="#535657" HorizontalAlignment="Center" Width="230" Height="34" Margin="0,20,0,10"
+                        Command="{Binding ApplyAllFrames}" Style="{StaticResource Select_Folder}" Click="Button_Click" >
 
                 </Button>
 
