--- a/CameraControl/DSLRPCToolSub/MainWindowAdvanced.xaml
+++ b/CameraControl/DSLRPCToolSub/MainWindowAdvanced.xaml
@@ -681,7 +681,7 @@
                         </Style>
                     </TabControl.Resources>
 
-                    <TabItem x:Name="CaptureTab"  FontFamily="roboto" Height="50px" Width="150px" Header="Capture" >
+                    <TabItem x:Name="CaptureTab" IsEnabled="True" FontFamily="roboto" Height="50px" Width="150px" Header="Capture" >
                         <Grid Background="#2e2f30" Margin="-3">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" MinWidth="260"/>
@@ -693,7 +693,7 @@
                                 <FrameworkElement x:Name="c1"/>
                                 <!-- no need to add the other three -->
                             </UniformGrid>
-                            <TabControl x:Name="ModeTabControl" Grid.Column="0" Background="#2e2f30" BorderThickness="0" SelectionChanged="TabControl_SelectionChanged" Width="260">
+                            <TabControl x:Name="ModeTabControl" IsEnabled="True" Grid.Column="0" Background="#2e2f30" BorderThickness="0" SelectionChanged="TabControl_SelectionChanged" Width="260">
                                 <TabItem x:Name="tab_360" FontFamily="roboto" Header="360" Height="40" FontSize="13" Width="{Binding ElementName=c1, Path=ActualWidth}">
                                     <DockPanel LastChildFill="True">
                                         <TextBlock DockPanel.Dock="Top" Text="Camera Parameter" Margin="8" Style="{StaticResource Sub_Heading_Title}"></TextBlock>
@@ -847,7 +847,13 @@
                                     <Image x:Name="_NoImage" Grid.Row="0" Grid.Column="0" Visibility="Visible" Source="NoImage.png" Stretch="UniformToFill" />
                                 </Grid>
 
-                                <Grid x:Name="grd_downbutton" Grid.Row="2" Background="#131415" >
+                                <Grid x:Name="buyPremium" Panel.ZIndex="5" Visibility="Collapsed" Grid.Column="0" Grid.ColumnSpan="3"  Grid.RowSpan="3" Focusable="True">
+                                    <TextBlock Foreground="#00000000" Margin="10">Please Purchase.</TextBlock>
+                                    <TextBlock TextAlignment="Center"  Foreground="#ffffff" Margin="200,267,199.6,199.8">Your trail period of 30 days is over. Please Purchase.</TextBlock>
+                                    <Button Name="purchaseButton" Click="purchaseButton_Click" Width="150">Purchase Premium</Button>
+                                </Grid>
+
+                                <Grid x:Name="grd_downbutton" IsEnabled="True" Grid.Row="2" Background="#131415" >
                                     <StackPanel Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                                         <Button ToolTip="{T:TranslateExtension CapturePhotoToolTip}"  Width="80" Height="80" Name="button3" Margin="4" BorderThickness="0" BorderBrush="Transparent" 
                                             IsEnabled="{Binding Source={x:Static Member=Core:ServiceProvider.DeviceManager}, Path=SelectedCameraDevice.IsConnected}" materialDesign:ButtonProgressAssist.IsIndicatorVisible="True" materialDesign:ButtonProgressAssist.Value="{Binding Source={x:Static Core:ServiceProvider.DeviceManager}, Path=SelectedCameraDevice.TransferProgress}" 
@@ -872,7 +878,7 @@
                             </Grid>
 
                             <Border Grid.Column="2" Background="#2e2f30"  BorderThickness="1" BorderBrush="#535657">
-                                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                                <ScrollViewer x:Name="CaptureRightTab" IsEnabled="True" VerticalScrollBarVisibility="Auto">
                                     <ScrollViewer.RenderTransform>
                                         <TransformGroup>
                                             <ScaleTransform/>
@@ -891,7 +897,7 @@
                         </Grid>
                     </TabItem>
 
-                    <TabItem Name="EditTab" FontFamily="roboto" Header="Edit" Width="150px" >
+                    <TabItem Name="EditTab" IsEnabled="True" FontFamily="roboto" Header="Edit" Width="150px" >
                         <Grid Background="#2e2f30" Margin="-3,-3,-3,-3">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" MinWidth="260"/>
@@ -900,6 +906,7 @@
                             </Grid.ColumnDefinitions>
 
                             <!--<local1:EditLeftControl Grid.Row="0" Grid.Column="0" />-->
+
                             <Border Grid.Row="0" Grid.Column="0"  BorderThickness="1" BorderBrush="#535657">
                                 <Grid Grid.Row="0" Grid.Column="0" >
                                     <UniformGrid Columns="2"   Margin="2,0,2,0">
@@ -1233,7 +1240,7 @@
                                                     </StackPanel>
                                                 </Border>
                                                 <!-- Sid Change Start -->
-                                                
+
                                             </StackPanel>
                                         </Grid>
                                     </StackPanel>
@@ -1256,6 +1263,7 @@
                                 </Grid>
 
                                 <Grid x:Name="grd_Edit_Canvasbg" Grid.Row="2" Background="#131415" >
+
                                     <Grid Grid.ColumnSpan="2" >
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="1*"/>
@@ -1272,6 +1280,23 @@
                                             <Grid x:Name="EditPicGrid" >
                                                 <Image Visibility="Collapsed" x:Name="EditFramePic"  Grid.Column="1" Source="{Binding Path= PathImg, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
                                                 <Image x:Name="EditFramePicEdit"  Grid.Column="1" Source="{Binding Source={x:Static Member=Core:ServiceProvider.Settings}, Path=SelectedBitmap.DisplayEditImage}" Stretch="Uniform"   Opacity="1" />
+
+                                                <StackPanel x:Name="ProgressPannel" Background = "#c0c0c0" VerticalAlignment="Center" Visibility="Collapsed" Panel.ZIndex="888" Margin="10,0,10,0">
+                                                    
+
+                                                    <TextBlock x:Name="ProgressText" HorizontalAlignment = "Center" Margin = "0,10"  Text = "Applying All Frames..." Foreground="#FF0C0D0D" />
+
+                                                        <Border Background="GhostWhite" BorderBrush="#404040" BorderThickness="1" Margin="15,0,15,0">
+                                                            <ProgressBar x:Name = "ChangesProgress" Value = "50"  Margin = "0" Maximum = "100" Minimum="5" Height = "15"  Focusable="False" Foreground="#007aff" Background="#dcdcdc" IsIndeterminate="True"/>
+                                                        </Border>
+
+                                                        <TextBlock x:Name="ProgressLabel" HorizontalAlignment = "Center" Margin = "0,10,0,5"  Text = "Saving Frame 0 of 36" Foreground="#FF0C0D0D" FontWeight="Normal" FontSize="14" TextDecorations="{x:Null}" />
+                                                    
+                                                </StackPanel>
+                                                
+
+
+                                                <!--<MediaElement x:Name="loaderContent" Visibility="Collapsed" />-->
                                                 <local1:WatermarkImage />
                                                 <Line x:Name="EV_Line1" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Grid.RowSpan="2" Stroke="Black" Fill="Black" StrokeThickness="2" />
                                                 <Line x:Name="EH_Line1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" Stroke="Black" Fill="Black" StrokeThickness="2"/>
@@ -1298,6 +1323,7 @@
                                                            HorizontalAlignment="Left" VerticalAlignment="Top" />
                                                 <ProgressBar x:Name="pb_Running" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" IsIndeterminate="True" Foreground="#FF2E74DA" 
                                                              Visibility="Collapsed" />
+                                                
                                             </Grid>
                                         </Border>
                                     </Grid>
@@ -1324,7 +1350,7 @@
                                     </ScrollViewer>
                                 </Grid>
                                 <Button Grid.Row="3" Visibility="Collapsed"  x:Name="ExportButton" Content="" Background="Transparent" Width="0" Height="0" BorderThickness="0" HorizontalAlignment="Center" Margin="30" Click="ExportButton_Click"  />
-                                
+
                             </Grid>
 
                             <Border Grid.Column="2" Background="#2e2f30"  BorderThickness="1" BorderBrush="#535657">
