Resolved issue: 1. Camel case notation for Shortcuts. 2. Progress bar invisiblity after process completed. 3. Live view disabled while in edit window. 4. Resolved bug opens folder select dialog while apply all frames. 5. Added nuget package WpfAnimatedGif 6. Shorcuts definitions added. 7. remoted python extraction step while installing setup 8. removed pan mode from edit menu. 9. fixed ctrl+shift+E functionality. 10. Corrections in filter,cropping, rotation functionalities.

--- a/CameraControl/DSLRPCToolSub/Controles/PhotoEdit.xaml
+++ b/CameraControl/DSLRPCToolSub/Controles/PhotoEdit.xaml
@@ -25,7 +25,7 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <StackPanel Orientation="Horizontal">
+                        <StackPanel x:Name="BackgroundFilterControl" Orientation="Horizontal">
                             <CheckBox Background="Transparent" IsChecked="{Binding IsBackgroundFilterApply}" Style="{StaticResource ChkboxSelector_new}" Width="21"/>
                             <Border Background="Transparent" BorderThickness="0 0 0 1" BorderBrush="#7f8486" Margin="5 0 5 0">
                                 <StackPanel Orientation="Horizontal">
