--- a/CameraControl/DSLRPCToolSub/MainWindowAdvanced.xaml
+++ b/CameraControl/DSLRPCToolSub/MainWindowAdvanced.xaml
@@ -1,6 +1,7 @@
 <Controls:MetroWindow x:Class="CameraControl.MainWindowAdvanced" 
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:gif="http://wpfanimatedgif.codeplex.com"
                     Title="OrangeMonkie" Height="799" Width="987" 
                     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
                     TextElement.FontWeight="Regular"
@@ -210,56 +211,57 @@
                     <!--<MenuItem Header="Open"   IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="Ctrl+O">-->
                         
                     <!--</MenuItem>-->
-                    <MenuItem Header="Recent Open"    IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" Margin="0"/>
+                    <!--<MenuItem Header="Recent Open"    IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" Margin="0"/>-->
                     
                     <!--<MenuItem Header="Save"  IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="Ctrl+S"/>
-                    <MenuItem Header="Save As"   IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="Ctrl+SHIFT+S"/>
+                    <MenuItem Header="Save As"   IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="Ctrl+Shift+S"/>
                     
-                    <MenuItem Header="Import"  IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="Ctrl+SHIFT+I"/>-->
+                    <MenuItem Header="Import"  IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="Ctrl+Shift+I"/>-->
                     <MenuItem Header="Export" x:Name="MenuExport" IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White">
-                        <MenuItem Header="Quick GIF Export"  Click="MenuItem_Click_1" IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="CTRL+SHIFT+E" Padding="10,0,10,0"/>
-                        <MenuItem Header="Other Export"  Click="MenuItem_Click_1" IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="CTRL+E" Padding="10,0,10,0"/>
+                        <MenuItem Header="Quick GIF Export"  Click="QuickExport"  IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="Ctrl+Shift+E" Padding="10,0,10,0"/>
+                        <MenuItem Header="Other Export"  Click="MenuItem_Click_1" IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White" InputGestureText="Ctrl+E" Padding="10,0,10,0"/>
                     </MenuItem>
 
                     <!--<MenuItem Header="Settings"  IsCheckable="False" IsChecked="False" IsEnabled="True" Visibility="Visible" Background="#222222" Foreground="White"/>-->
                     
                     <MenuItem Header="{T:TranslateExtension MenuExit}" InputGestureText="{myClasess:CommandShortcutExtensioncs All_Close}" Background="#222222" Foreground="White" Name="Exit" Click="Exit_Click"/>
                 </MenuItem>
+                
                 <MenuItem Header="{T:TranslateExtension MenuView}" Padding="5,2" Margin="1" Visibility="{Binding Branding.ShowViewMenu, Converter={StaticResource BooleanToVisibilityConverter}}">
-                    <MenuItem Header="Live View"  Background="#222222" Foreground="White">
+                    <MenuItem x:Name="menu_liveView" Header="Live View"  Background="#222222" Foreground="White">
                         <MenuItem Header="1:1" x:Name="ratio_1" IsCheckable="True" IsChecked="False" Checked="ratio1_Checked" Unchecked="ratio1_Unchecked"
                       Background="#222222" Foreground="White" Padding="0,0,20,0"/>
                         <MenuItem Header="4:3" x:Name="ratio_4" IsCheckable="True" IsChecked="False" Checked="ratio2_Checked" Unchecked="ratio2_Unchecked" Background="#222222" Foreground="White" Padding="0,0,20,0"/>
                         <MenuItem Header="16:9" x:Name="ratio_16" IsCheckable="True" IsChecked="False" Checked="ratio3_Checked" Unchecked="ratio3_Unchecked" Background="#222222" Foreground="White" Padding="0,0,20,0"/>
                     </MenuItem>
                     <MenuItem Header="Center Line" Background="#222222" Foreground="White">
-                        <MenuItem Header="Vertical" x:Name="Vertical_mList" Checked="Tg_Btn6_Checked" Unchecked="Tg_Btn6_Unchecked"  IsCheckable="True" IsChecked="False"   Background="#222222"  Foreground="White" InputGestureText="ALT+V" Padding="0,0,20,0"/>
-                        <MenuItem Header="Horizontal" x:Name="Horizontal_mList" Checked="Tg_Btn7_Checked" Unchecked="Tg_Btn7_Unchecked" IsCheckable="True" IsChecked="False"  Background="#222222" Foreground="White" InputGestureText="ALT+H" Padding="0,0,20,0" />
+                        <MenuItem Header="Vertical" x:Name="Vertical_mList" Checked="Tg_Btn6_Checked" Unchecked="Tg_Btn6_Unchecked"  IsCheckable="True" IsChecked="False"   Background="#222222"  Foreground="White" InputGestureText="Shift+V" Padding="0,0,20,0"/>
+                        <MenuItem Header="_Horizontal" x:Name="Horizontal_mList" Checked="Tg_Btn7_Checked" Unchecked="Tg_Btn7_Unchecked" IsCheckable="True" IsChecked="False"  Background="#222222" Foreground="White" InputGestureText="Shift+H" Padding="0,0,20,0" />
                     </MenuItem>
                     <MenuItem Header="Grid"  Background="#222222" Foreground="White">
-                        <MenuItem x:Name="Grid3x3" Header="3x3" IsCheckable="True" IsChecked="False" Checked="grid2_Checked" Unchecked="grid2_Unchecked" Background="#222222" Foreground="White"  InputGestureText="ALT+1" Padding="0,0,20,0" />
-                        <MenuItem x:Name="Grid6x4" Header="6x4" IsCheckable="True" IsChecked="False" Checked="grid3_Checked" Unchecked="grid3_Unchecked" Background="#222222" Foreground="White" InputGestureText="ALT+2" Padding="0,0,20,0"/>
-                        <MenuItem x:Name="Grid3x3Dial" Header="3x3 + Dial" IsCheckable="True" IsChecked="False" Checked="grid4_Checked" Unchecked="grid4_Unchecked"  Background="#222222" Foreground="White" InputGestureText="ALT+3" Padding="0,0,20,0" />
-                        <MenuItem Header="Toggle GRID" Background="#222222" Foreground="White" InputGestureText="ALT+G" Padding="0,0,20,0" Click="toggle_grid"/>
+                        <MenuItem x:Name="Grid3x3" Header="3x3" IsCheckable="True" IsChecked="False" Checked="grid2_Checked" Unchecked="grid2_Unchecked" Background="#222222" Foreground="White"  InputGestureText="Shift+1" Padding="0,0,20,0" />
+                        <MenuItem x:Name="Grid6x4" Header="6x4" IsCheckable="True" IsChecked="False" Checked="grid3_Checked" Unchecked="grid3_Unchecked" Background="#222222" Foreground="White" InputGestureText="Shift+2" Padding="0,0,20,0"/>
+                        <MenuItem x:Name="Grid3x3Dial" Header="3x3 + Dial" IsCheckable="True" IsChecked="False" Checked="grid4_Checked" Unchecked="grid4_Unchecked"  Background="#222222" Foreground="White" InputGestureText="Shift+3" Padding="0,0,20,0" />
+                        <MenuItem x:Name="toggle_grid_menu" Header="Toggle GRID" Background="#222222" Foreground="White" InputGestureText="Shift+G" Padding="0,0,20,0" Click="toggle_grid"/>
                     </MenuItem>
                     <MenuItem x:Name="menu_focusZoom" Header="Focus Zoom" Background="#222222" Foreground="White">
-                        <MenuItem x:Name="Zoomx1" Header="x1" IsCheckable="True" IsChecked="{Binding LiveView}"  Background="#222222" Foreground="White" InputGestureText="CTRL+1" Padding="0,0,20,0" Checked="Zoom1x_checked" Unchecked="Zoom1x_unchecked" />
-                        <MenuItem x:Name="Zoomx5" Header="x5" IsCheckable="True" IsChecked="{Binding LiveView}"  Background="#222222" Checked="Zoom5x_checked" Unchecked="Zoom5x_unchecked" Foreground="White" InputGestureText="CTRL+2" Padding="0,0,20,0"/>
-                        <MenuItem x:Name="Zoomx10" Header="x10" IsCheckable="True" IsChecked="{Binding LiveView}"  Background="#222222" Checked="Zoom10x_checked" Unchecked="Zoom10x_unchecked" Foreground="White" InputGestureText="CTRL+3" Padding="0,0,20,0" />
-                        <MenuItem Header="Toggle ZOOM" Padding="0,0,20,0" Click="toggelZoom"  Background="#222222" Foreground="White" InputGestureText="CTRL+T" />
+                        <MenuItem x:Name="Zoomx1" Header="x1" IsCheckable="True" IsChecked="{Binding LiveView}"  Background="#222222" Foreground="White" InputGestureText="Ctrl+1" Padding="0,0,20,0" Checked="Zoom1x_checked" Unchecked="Zoom1x_unchecked" Click="Zoom1x_checked" />
+                        <MenuItem x:Name="Zoomx5" Header="x5" IsCheckable="True" IsChecked="{Binding LiveView}"  Background="#222222" Checked="Zoom5x_checked" Unchecked="Zoom5x_unchecked" Foreground="White" InputGestureText="Ctrl+2" Padding="0,0,20,0"/>
+                        <MenuItem x:Name="Zoomx10" Header="x10" IsCheckable="True" IsChecked="{Binding LiveView}"  Background="#222222" Checked="Zoom10x_checked" Unchecked="Zoom10x_unchecked" Foreground="White" InputGestureText="Ctrl+3" Padding="0,0,20,0" />
+                        <MenuItem x:Name="toggleZoom_menu" Header="Toggle Zoom" Padding="0,0,20,0" Click="toggelZoom"  Background="#222222" Foreground="White" InputGestureText="Ctrl+T" />
                     </MenuItem>
 
-                    <MenuItem x:Name="overlayMenu_item" Header="Overlay" Background="#222222" Foreground="White" InputGestureText="CTRL+H" Checked="ETg_Btn8_Checked" Unchecked="ETg_Btn8_Unchecked" IsCheckable="True" IsChecked="False"/>
+                    <MenuItem x:Name="overlayMenu_item" Header="Overlay" Background="#222222" Foreground="White" InputGestureText="Ctrl+H" Checked="ETg_Btn8_Checked" Unchecked="ETg_Btn8_Unchecked" IsCheckable="True" IsChecked="False"/>
                 </MenuItem>
                 <MenuItem x:Name="menu_edit" Header="Edit" Visibility="{Binding Branding.ShowSessionPanel, Converter={StaticResource BooleanToVisibilityConverter}}"  Padding="5,2" Margin="1" >
-                    <MenuItem Header="Undo" Command="{Binding NewSessionCommand}" Background="#222222" Foreground="White" InputGestureText="CTRL+Z"/>
-                    <MenuItem Header="Redo" Command="{Binding EditSessionCommand}" Background="#222222" Foreground="White" InputGestureText="CTRL+R"/>
-                    <MenuItem x:Name="menu_crop" Header="Crop" Background="#222222" Foreground="White" InputGestureText="CTRL+L" Click="ETg_Btn9_Checked" />
-                    <!--<MenuItem Header="Zoom +" Command="{Binding RefreshSessionCommand}" Background="#222222" Foreground="White" InputGestureText="CTRL++"/>
-                    <MenuItem Header="Zoom -" Command="{Binding ShowSessionCommand}" Background="#222222" Foreground="White" InputGestureText="CTRL+-"/>-->
-                    <MenuItem Header="Pan" Command="{Binding SendCommand}" CommandParameter="NextSeries" InputGestureText="CTRL+P" Background="#222222" Foreground="White"/>
-                    <MenuItem Header="Rotate" Background="#222222" Foreground="White" InputGestureText="ALT+R" Click="ERotateRight_Click"/>
-                    <!--<MenuItem Header="Add Watermark" Command="{Binding Path=ImportSessionCommand}" Background="#222222" Foreground="White" InputGestureText="CTRL+W"/>-->
+                    <MenuItem Header="Undo" Command="{Binding NewSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl+Z"/>
+                    <MenuItem Header="Redo" Command="{Binding EditSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl+R"/>
+                    <MenuItem x:Name="menu_crop" Header="Crop" Background="#222222" Foreground="White" InputGestureText="Ctrl+L" Click="ETg_Btn9_Checked" />
+                    <!--<MenuItem Header="Zoom +" Command="{Binding RefreshSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl++"/>
+                    <MenuItem Header="Zoom -" Command="{Binding ShowSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl+-"/>-->
+                    <!--<MenuItem Header="Pan" Command="{Binding SendCommand}" CommandParameter="NextSeries" InputGestureText="Ctrl+P" Background="#222222" Foreground="White"/>-->
+                    <MenuItem x:Name="menu_rotate" Header="Rotate" Background="#222222" Foreground="White" InputGestureText="Shift+R" Click="ERotateRight_Click"/>
+                    <!--<MenuItem Header="Add Watermark" Command="{Binding Path=ImportSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl+W"/>-->
                 </MenuItem>
                 <MenuItem x:Name="MenuMode" Header="Mode" Padding="5,2" Margin="1" Visibility="{Binding Branding.ShowCameraMenu, Converter={StaticResource BooleanToVisibilityConverter}}" Foreground="white">
                     <MenuItem x:Name="mode360" Header="360"  Click="Mode_360Checked"  IsEnabled="False" Background="#222222" Foreground="White"/>
@@ -1246,6 +1248,21 @@
                                             <Grid x:Name="EditPicGrid" >
                                                 <Image Visibility="Collapsed" x:Name="EditFramePic"  Grid.Column="1" Source="{Binding Path= PathImg, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
                                                 <Image x:Name="EditFramePicEdit"  Grid.Column="1" Source="{Binding Source={x:Static Member=Core:ServiceProvider.Settings}, Path=SelectedBitmap.DisplayEditImage}" Stretch="Uniform"   Opacity="1" />
+
+                                                <Grid x:Name="preLoader" Visibility="Collapsed">
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="15*"/>
+                                                    </Grid.ColumnDefinitions>
+                                                    <Grid.RowDefinitions>
+                                                        <RowDefinition Height="6*"/>
+                                                        <RowDefinition Height="16*"/>
+                                                        <RowDefinition Height="7*"/>
+                                                    </Grid.RowDefinitions>
+                                                    <Image Grid.Column="0" Grid.Row="1" Name="img" gif:ImageBehavior.RepeatBehavior="Forever" 
+                /> <!--Visibility="Visible" gif:ImageBehavior.AnimatedSource="assets/images/spinner.gif"-->
+                                                    <TextBlock Grid.Row="2" Grid.Column="0" x:Name="preloaderText" Text="Loading images, please wait..." HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Medium" LineStackingStrategy="BlockLineHeight" Foreground="#FF0B0C0C"/>
+                                                </Grid>
+                                                 <!--gif:ImageBehavior.AnimatedSource="dslrpctoolsub/assets/images/spinner.gif"-->
 
                                                 <StackPanel x:Name="ProgressPannel" Background = "#c0c0c0" VerticalAlignment="Center" Visibility="Collapsed" Panel.ZIndex="888" Margin="10,0,10,0">
                                                     
