--- a/CameraControl/DSLRPCToolSub/MainWindowAdvanced.xaml
+++ b/CameraControl/DSLRPCToolSub/MainWindowAdvanced.xaml
@@ -257,9 +257,9 @@
                     <MenuItem x:Name="overlayMenu_item" Header="Overlay" Background="#222222" Foreground="White" InputGestureText="Ctrl+H" Checked="ETg_Btn8_Checked" Unchecked="ETg_Btn8_Unchecked" IsCheckable="True" IsChecked="False"/>
                 </MenuItem>
                 <MenuItem x:Name="menu_edit" Header="Edit" Visibility="{Binding Branding.ShowSessionPanel, Converter={StaticResource BooleanToVisibilityConverter}}"  Padding="5,2" Margin="1" >
-                    <MenuItem Header="Undo" Command="{Binding NewSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl+Z"/>
-                    <MenuItem Header="Redo" Command="{Binding EditSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl+R"/>
-                    <MenuItem x:Name="menu_crop" Header="Crop" Background="#222222" Foreground="White" InputGestureText="Ctrl+L" Click="ETg_Btn9_Checked" />
+                    <MenuItem x:Name="btnUndo" Header="Undo" Click="UndoClick" Background="#222222" Foreground="White" InputGestureText="Ctrl+Z" />
+                    <MenuItem x:Name="btnRedo" Header="Redo" Click="RedoClick" Background="#222222" Foreground="White" InputGestureText="Ctrl+R" />
+                    <MenuItem  x:Name="menu_crop" Header="Crop" Background="#222222" Foreground="White" InputGestureText="Ctrl+L" Click="ETg_Btn9_Checked" />
                     <!--<MenuItem Header="Zoom +" Command="{Binding RefreshSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl++"/>
                     <MenuItem Header="Zoom -" Command="{Binding ShowSessionCommand}" Background="#222222" Foreground="White" InputGestureText="Ctrl+-"/>-->
 
@@ -655,7 +655,7 @@
                         </Style>
                     </TabControl.Resources>
 
-                    <TabItem x:Name="CaptureTab" IsEnabled="True" FontFamily="roboto" Height="50px" Width="150px" Header="Capture" >
+                    <TabItem x:Name="CaptureTab" IsEnabled="True" FontFamily="roboto" Height="50px" Width="150px" Header="Capture" IsSelected="True" >
                         <Grid Background="#2e2f30" Margin="-3">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" MinWidth="260"/>
@@ -1254,11 +1254,11 @@
                                                 <Image Visibility="Collapsed" x:Name="EditFramePic"  Grid.Column="1" Source="{Binding Path= PathImg, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
                                                 <Image x:Name="EditFramePicEdit"  Grid.Column="1" Source="{Binding Source={x:Static Member=Core:ServiceProvider.Settings}, Path=SelectedBitmap.DisplayEditImage}" Stretch="Uniform"   Opacity="1" />
                                                 
-                                                <Grid x:Name="preLoader" Visibility="Collapsed">
+                                                <!--<Grid x:Name="preLoader" Visibility="Collapsed">
                                                     <Image Name="img" gif:ImageBehavior.RepeatBehavior="Forever" 
-                /> <!--Visibility="Visible" gif:ImageBehavior.AnimatedSource="assets/images/spinner.gif"-->
+                /> --><!--Visibility="Visible" gif:ImageBehavior.AnimatedSource="assets/images/spinner.gif"--><!--
                                                     <TextBlock x:Name="preloaderText" Text="Loading images, please wait..." HorizontalAlignment="Center" VerticalAlignment="Bottom" FontWeight="Medium" LineStackingStrategy="BlockLineHeight" Foreground="#FF0B0C0C"/>
-                                                </Grid>
+                                                </Grid>-->
                                                  <!--gif:ImageBehavior.AnimatedSource="dslrpctoolsub/assets/images/spinner.gif"-->
 
                                                 <Grid x:Name="preLoader" Visibility="Collapsed">
@@ -1266,9 +1266,9 @@
                                                         <ColumnDefinition Width="15*"/>
                                                     </Grid.ColumnDefinitions>
                                                     <Grid.RowDefinitions>
-                                                        <RowDefinition Height="6*"/>
-                                                        <RowDefinition Height="16*"/>
-                                                        <RowDefinition Height="7*"/>
+                                                        <RowDefinition Height="8*"/>
+                                                        <RowDefinition Height="12*"/>
+                                                        <RowDefinition Height="9*"/>
                                                     </Grid.RowDefinitions>
                                                     <Image Grid.Column="0" Grid.Row="1" Name="img" gif:ImageBehavior.RepeatBehavior="Forever" 
                 /> <!--Visibility="Visible" gif:ImageBehavior.AnimatedSource="assets/images/spinner.gif"-->
