Foldio Dome and Turn Table glitch resolved

--- a/CameraControl/DSLRPCToolSub/Controles/TurnTableControl.xaml
+++ b/CameraControl/DSLRPCToolSub/Controles/TurnTableControl.xaml
@@ -242,7 +242,7 @@
                             </Grid>
                             <Grid Grid.Row="1">
                                 <Grid.Background>
-                                    <ImageBrush ImageSource="{Binding DisplayedDeviceImagePath}" Stretch="None"/>
+                                    <ImageBrush ImageSource="{Binding DisplayedDeviceImagePath}" Stretch="Uniform"/>
                                 </Grid.Background>
                             </Grid>
                         </Grid>
